docroot/themes/custom/site/src/scss/custom/components/_header.scss
// |--------------------------------------------------------------------------
// | Header
// |--------------------------------------------------------------------------
// |
// | This file contains styles for the following:
// | - .layout__header
// |

// --------------------------------------------------
// Variables
// --------------------------------------------------

// --------------------------------------------------
// Styling
// --------------------------------------------------

// Header
.layout__header {

  .layout-header-contact-information {

    .icon {

      &:after {
        content: $fa-var-phone;
      }
    }
  }

  .layout-header-tour {

    .icon {

      &:after {
        content: $fa-var-bookmark-o;
      }
    }
  }

  .layout-header-contact {

    .icon {

      &:after {
        content: $fa-var-android;
      }
    }
  }

  .layout-header-language-selection {

    ul {
      @extend .list-inline;
      line-height: 38px;
      margin: 0;

      li {

        a {

          &:after {
            display: inline-block;
            content: "|";
            font-size: $font-size-small;
            color: #929191;
            margin-left: 10px;
          }
        }

        &:last-child {

          a {

            &:after {
              display: none;
            }
          }
        }
      }
    }
  }

  // Icon
  .layout-header-contact-information,
  .layout-header-tour,
  .layout-header-contact,
  .layout-header-language-selection {
    font-size: $font-size-extra-small;
    font-weight: $font-weight-bold;
    text-transform: uppercase;
    padding-left: 18px;
    padding-right: 18px;
    display: flex;
    align-items: center;

    a {

      display: flex;
      letter-spacing: 0.045em;
      font-weight: 600;
      font-family: 'Open Sans', sans-serif;

      &,
      &:hover {
        color: #fff;
      }
    }

    span {
      color: $brand-secondary;
      font-size: $font-size-extra-extra-small;
      margin-left: 6px;
      font-weight: $font-weight-bold;
      font-family: 'Open Sans', sans-serif;
    }

    .icon {
      @include line-height(18px);
      font-size: 18px;
      color: #fff;
      margin-right: 5px;
    }

    .material-icons {
      margin-right: 10px;
    }
  }

  .layout-navigation__dropdown .layout-navigation__link__icon,
  .layout-navigation__dropdown .layout-navigation__link__phone,
  .layout-navigation__dropdown .layout-navigation__link__search {
    display: none !important;
  }

  .layout__header-row--top {
    @include layout-header-row-height(38px, 38px, 38px);
  }

  .layout__header-row--bottom {
    @include layout-header-row-height(67px, 67px, 67px);
    border-bottom: 1px solid $border-color;
    background-color: #fff;

    .layout-navigation {

      > .layout-navigation__dropdown {

        > a {

          &:after {
            display: inline-block;
            font-family: FontAwesome;
            font-size: $font-size-large;
            color: $text-color;
            content: $fa-var-angle-down;
            margin-left: 6px;
          }
        }
      }

      > .layout-navigation__dropdown,
      > .layout-navigation__link {

        > a {
          border-right: 1px solid $border-color;
        }

        &:last-child {
          border-right: 0;
        }
      }
    }

    .layout-navigation__dropdown {

      > a.is-active  {

        &:after {
          display: inline-block;
          font-family: FontAwesome;
          font-size: $font-size-large;
          color: #00bcff;
          content: $fa-var-angle-down;
          margin-left: 6px;
        }
      }
    }

    a {
      font-weight: $font-weight-bold;
      text-transform: uppercase;
      font-family: 'Open Sans', sans-serif;

      &:hover {
        text-decoration: none;
      }
    }

    @include layout-header-navigation-styling(
    $text-color,
    $text-color,
    $brand-primary,

    $border-color,
    #fff
    );

    @include layout-header-dropdown-menu-styling(
    #fff,
    $text-color,
    $text-color,
    $brand-primary,

    $border-color,
    $border-color
    );

    .region {

      //      &,
      //      > nav {
      //        display: block;
      //        border: 0;
      //      }

    }
  }

  .layout__header-row {
    padding-left: 105px;
    padding-right: 0;
    flex-wrap: wrap;
  }

  .layout__header-logo {
    position: absolute;
    background: #00bcff url('../images/layout-header-logo.png') center center no-repeat;
    background-size: 100%;
    width: 105px;
    height: 105px;
  }

  .layout-navigation__link__icon {
    max-width: 68px;
  }
}

// PopUp CTA
.hideit {
  display: none !important;
}

#block-popup-cta {
  width: 100%;
  height: 75px;
  background: white;
  position: fixed;
  bottom: 0;
  display: flex;
  flex-direction: row;
  z-index: 999999;
  overflow: hidden;
  margin: 0;
  -webkit-box-shadow: 0px -4px 64px -19px rgba(0, 0, 0, 0.43);
  -moz-box-shadow: 0px -4px 64px -19px rgba(0, 0, 0, 0.43);
  box-shadow: 0px -4px 64px -19px rgba(0, 0, 0, 0.43);

  .close {
    height: 75px;
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-right: 20px;
    font-size: 1.5em;
  }
}

#pc-title {
  width: 400px;
  height: 75px;
  display: flex;
  padding-left: 20px;
  justify-content: flex-start;
  align-items: center;
  margin-right: -150px;
  background-image: url('http://svgshare.com/i/1GX.svg');
  background-repeat: no-repeat;
  background-size: 275%;
  background-position: 75px 0px;



  h5 {
    color: #fff;
    font-size: $font-size-small;
    font-weight: $font-weight-bold;
    font-family: 'Open Sans', sans-serif;
    text-transform: uppercase;
    background: $brand-attention;
    padding: 20px;
    padding-top: 30px;
    padding-bottom: 30px;
    margin-left: -20px;

  }
}

#spacing {
  color: lightgray;
  margin-left: 5px;
}
/* ... */

